Update run.md